Update libgit-binary submodule to target main branch instead of vs-8.0-v0.26.8 branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -8,7 +8,7 @@
 [submodule "main/external/libgit-binary"]
 	path = main/external/libgit-binary
 	url = https://github.com/valhalla-proj/libgit-binary.git
-	branch = vs-8.0-v0.26.8
+	branch = main
 [submodule "main/external/libgit2"]
 	path = main/external/libgit2
 	url = https://github.com/valhalla-proj/libgit2.git
